--- a/_config.yml
+++ b/_config.yml
@@ -54,12 +54,12 @@ staticman:
   path                   : # "/_data/comments/{options.slug}" (default)
   requiredFields         : # ['name', 'email', 'message']
   transforms:
-​    email                : # "md5"
+  email                : # "md5"
   generatedFields:
-​    date:
-​      type               : # "date"
-​      options:
-​        format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
+   date:
+     type               : # "date"
+  options:
+     format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
   endpoint               : # URL of your own deployment with trailing slash, will fallback to the public instance
 reCaptcha:
   siteKey                :
