--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: Crypto_academy
 subtitle:
 description:
-author: John Doe
+author: michael_parkerr
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: ko
 date_format: '%Y-%m-%d'
